--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -16,6 +16,12 @@
     </style>
   </head>
   <body>
+    <script type="text/javascript">
+      var loc = window.location.toString(),
+          params = loc.split('?')[1],
+          iframe = document.getElementById('myIframe');
+      iframe.src = iframe.src + '?' + params;
+    </script>
     <iframe id="outerFrame"
       src="https://script.google.com/macros/s/AKfycbwAN-d88IGiGX6t7ddHp2pidzzfco6JjWKawzp-hAhrEHwxMI5J/exec">
     </iframe>
