--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -21,6 +21,7 @@
           params = loc.split('?')[1],
           iframe = document.getElementById('myIframe');
       iframe.src = iframe.src + '?' + params;
+      alert("params = " + params);
     </script>
     <iframe id="outerFrame"
       src="https://script.google.com/macros/s/AKfycbwAN-d88IGiGX6t7ddHp2pidzzfco6JjWKawzp-hAhrEHwxMI5J/exec">
