--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -32,9 +32,12 @@
       }
 
       var oReq = new XMLHttpRequest();
-      oReq.open("GET", "https://web.pulsepoint.org/DB/giba.php?agency_id=43070");
-      oReq.setRequestHeader("accept", "*/*");
-      oReq.setRequestHeader("referer", "https://web.pulsepoint.org/");
+      //oReq.open("GET", "https://web.pulsepoint.org/DB/giba.php?agency_id=43070");
+      //oReq.open("GET", "https://script.google.com/macros/s/AKfycbwAN-d88IGiGX6t7ddHp2pidzzfco6JjWKawzp-hAhrEHwxMI5J/exec");
+      //########## THIS ADDRESS IS DEV VERSION (PUBLISHED VERSION ABOVE)
+      oReq.open("GET", "https://script.googleusercontent.com/macros/echo?user_content_key=_TKSjKGL7J0RM20fQaa8jCjBxz4BPmIQtLLexyUvR5uejlv3IJdHT6tv1ihL5Tpk4-Us4zGwDRVF8XCLxkeg9Fa9QNUotjVQm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnGQS3vc732XWUh0Q-6iW-nGLQHa91-3wgrVBy4R1p4BUVqi8j3lBxaah6sDE-6Z5KQ&lib=ML4KCg6cRpRiN2gyKlTdenPH-0xapcnCt");
+      //oReq.setRequestHeader("accept", "*/*");
+      //oReq.setRequestHeader("referer", "https://web.pulsepoint.org/");
       oReq.addEventListener("load", reqListener);
       oReq.send();
     </script>
