--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>PulsePointFeed</title>
+    <link rel="icon" type="image/png" href="/somewhere/myicon.png" />
+    
+    <link rel="icon" href="PulsePoint-icon-small.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="PulsePoint-icon-small.png" type="image/x-icon" />
+    <link rel="apple-touch-icon-precomposed" href="PulsePoint-icon-ios.png" />
     
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
