--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -45,8 +45,8 @@
         <div><span class="relTime"><1 min</span> ago</div>
       </div>
       <div class="Units"><strong>B1, B5, E1, <span class="CurrUnit">E23</span>, E34, T1, U34A, U34B</strong> (5’s)</div>
-      <a href="">
-        <div>Story Rd & Hopkins Dr</div>
+      <a class="LeftLeft" href="">
+        <div>Story Rd & Hopkins Dr&nbsp;</div>
         <div class="Deemphasize">(Golden Wheel MHP)</div>
       </a>
     </div>
@@ -57,20 +57,20 @@
         <div><span class="relTime">2 min</span> ago</div>
       </div>
       <div class="Units"><strong><span class="CurrUnit">E23</span>, S5</strong></div>
-      <a href="">
-        <div><a href="">Flickinger Park Playground</div>
+      <a class="LeftLeft" href="">
+        <div>Flickinger Park Playground&nbsp;</div>
         <div class="Deemphasize">(public)</div>
       </a>
     </div>
     
     <div class="Call">
       <div class="LeftRight Deemphasize">
-        <div class="Type">Alarm</div>
+        <div class="Type">Alarm [with LeftLeft wrap behavior]</div>
         <div><span class="relTime">5 min</span> ago</div>
       </div>
       <div class="Units"><strong>E34</strong></div>
-      <a href="">
-        <div><a href="">346 Checkers Dr</div>
+      <a class="LeftLeft" href="">
+        <div>346 Checkers Dr&nbsp;</div>
         <div class="Deemphasize">(Checkers Apartments)</div>
       </a>
     </div>
