--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -65,7 +65,7 @@
     
     <div class="Call">
       <div class="LeftRight Deemphasize">
-        <div class="Type">Alarm [with LeftLeft wrap behavior #2]</div>
+        <div class="Type">Alarm [deemph size/vert fixed]</div>
         <div><span class="relTime">5 min</span> ago</div>
       </div>
       <div class="Units"><strong>E34</strong></div>
