--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -34,7 +34,7 @@
     </div>
     <div class="Right">
       Last refreshed <span id="refreshed">never</span>
-      <a class="RefreshButton" href="javascript:refreshData();">🔃</a>
+      <a class="RefreshButton" href="javascript:refreshData();"><img src="RefreshButton.gif" /></a>
     </div>
     
     <hr style="margin-top: 1em;" />
