--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -31,9 +31,11 @@
               style="margin-left: 0.3em;" />
           </h1>
       </div>
-      <div class="Deemphasize" style="padding-top: 0.3em;">
-        Last refreshed <span id="refreshed">never</span>
-        <a href="javascript:refreshData();"><img class="RefreshButton" src="RefreshButton.gif" /></a>
+      <div class="Deemphasize">
+        <a href="javascript:refreshData();">
+          Last refreshed <span id="refreshed">never</span>
+          <img class="RefreshButton" src="RefreshButton.gif" />
+        </a>
       </div>
     </div>
     
@@ -42,7 +44,7 @@
     <div class="Call CurrCall">
       <div class="LeftRight Deemphasize">
         <div>Structure Fire (1A) – CMD12</div>
-        <div><span class="relTime"><1 min</span></div>
+        <div><span class="relTime"><1m</span></div>
       </div>
       <div class="Units"><strong>B1, B5, E1, <span class="CurrUnit">E23</span>, E34, T1, U34A, U34B</strong> (5’s)</div>
       <a class="LeftLeft" href="">
@@ -54,7 +56,7 @@
     <div class="Call">
       <div class="LeftRight Deemphasize">
         <div class="Type">Medical</div>
-        <div><span class="relTime">2 min</span></div>
+        <div><span class="relTime">2m</span></div>
       </div>
       <div class="Units"><strong><span class="CurrUnit">E23</span>, S5</strong></div>
       <a class="LeftLeft" href="">
@@ -65,8 +67,8 @@
     
     <div class="Call">
       <div class="LeftRight Deemphasize">
-        <div class="Type">Alarm [deemph size/vert fixed #3]</div>
-        <div><span class="relTime">5 min</span></div>
+        <div class="Type">Alarm [deemph size/vert fixed #4]</div>
+        <div><span class="relTime">5m</span></div>
       </div>
       <div class="Units"><strong>E34</strong></div>
       <a class="LeftLeft" href="">
