--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -39,7 +39,7 @@
       </div>
     </div>
     
-    <hr style="margin-top: 1em;" />
+    <hr style="margin-top: 0.5em; margin-bottom: 1.5em;" />
     
     <div class="Call CurrCall">
       <div class="LeftRight Deemphasize">
