--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -26,8 +26,8 @@
             <input id="unitInput" type="text" name="Unit" size="4"
               value=""
               onClick="unitInput_selectNumber(this)"
-              onKeyDown="unitInput_changed(this)"
-              onKeyUp="unitInput_changed(this)"
+              onKeyDown="unitInput_changed(this, event)"
+              onKeyUp="unitInput_changed(this, event)"
               style="margin-left: 0.3em;" />
           </h1>
       </div>
