--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -35,6 +35,7 @@
         <a href="javascript:refreshData();">
           Last refreshed <br/><span id="RefreshedTime">never</span>
           <img id="RefreshButton" class="RefreshButton" src="PulsePointFeed/RefreshButton.gif" />
+          <br />&nbsp;
         </a>
       </div>
     </div>
