--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -38,6 +38,9 @@
             onKeyDown="unitInput_onKeyDown(this, event)"
             onKeyPress="unitInput_onKeyPress(this, event)"
              />
+          <a id="MapCallLink" target="_blank" href="">
+            <img class="MapCallButton" src="PulsePointFeed/MapIcon.png" />
+          </a>
         </h1>
       </div>
       <div class="LastRefreshed Deemphasize">
