On mobile, exclude target="_blank" from map links

--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -38,7 +38,7 @@
             onKeyDown="unitInput_onKeyDown(this, event)"
             onKeyPress="unitInput_onKeyPress(this, event)"
              />
-          <a id="MapCallLink" href="">
+          <a id="MapCallLink" target="_blank" href="">
             <img class="MapCallButton" src="PulsePointFeed/MapIcon.png" />
           </a>
         </h1>
