--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -28,9 +28,6 @@
         <h1 style="margin-top: 0; margin-bottom: 0; ">
           <span class="Deemphasize">Current unit:</span>
           <br />
-          <a id="UnitStationLink" target="_blank" href="">
-            <img class="UnitLinkButton" src="PulsePointFeed/ArrowOut.png" />
-          </a>
           <input id="UnitInput" type="text" style="text-transform: uppercase;" name="Unit" size="4"
             value=""
             onFocus="unitInput_onFocus(this)"
@@ -38,7 +35,10 @@
             onKeyDown="unitInput_onKeyDown(this, event)"
             onKeyPress="unitInput_onKeyPress(this, event)"
              />
-          <a id="MapCallLink" target="_blank" href="">
+          <a id="MapStationLink" target="_blank" href="">
+            <img class="MapStationButton" src="PulsePointFeed/StationIcon.png" />
+          </a>
+          <a id="MapCallLink" target="_blank" href="javascript:awaitAndMapCallForUnit()">
             <img class="MapCallButton" src="PulsePointFeed/MapIcon.png" />
           </a>
         </h1>
