--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -23,6 +23,8 @@
   
   <body onload="init()">
     
+    <dialog id="WaitCallModal" class="ModalDialog" open="1">Awaiting call info...</dialog>
+    
     <div id="PageHeader" class="LeftRight">
       <div>
         <h1 style="margin-top: 0; margin-bottom: 0; ">
