--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="refresh" content="3; URL='https://www.google.com/maps/dir/?api=1&destination=700+Hampshire+St&travelmode=driving'" />
+    <meta http-equiv="refresh" content="3; URL='comgooglemapsurl://www.google.com/maps/dir/?api=1&destination=700+Hampshire+St&travelmode=driving'" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
