--- a/PulsePointFeed.htm
+++ b/PulsePointFeed.htm
@@ -50,8 +50,8 @@
       </div>
     </div>
     
-    <div id="Calls" class="content">
-    </div>
+    <div id="HeadingSpacer">&nbsp;</div>
+    <div id="Calls" class="content"></div>
     
     <a id="MapCallLink" target="_blank" href="javascript:awaitAndMapCallForUnit()">
       <div id="MapCallFooter">
